--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "Rebel Astronaut",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Devops/Security Consulting",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Giles Hinchcliff <giles@rebelastronaut.co.uk",
   "dependencies": {
     "gatsby": "^2.15.35",
-    "gatsby-image": "^2.2.27",
+    "gatsby-image": "^2.2.29",
+    "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-plugin-manifest": "^2.2.21",
     "gatsby-plugin-offline": "^3.0.14",
     "gatsby-plugin-react-helmet": "^3.1.11",
