--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Rebel Astronaut",
+  "name": "rebel-astronaut",
   "private": true,
   "description": "Devops/Security Consulting",
   "version": "0.1.0",
